# rust-web-totp

./: .env  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SUBMIT_GUIDE.md  HOW_TO_SUBMIT.txt  LICENSE  README.md  START.bat  build.ps1  build.sh  git-commit.bat  install.sh  run.ps1  run.sh  start.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
docs/: API.md  QUICKSTART.md  README_EN.md  SECURITY.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AddTOTP.jsx  Login.jsx  Settings.jsx  TOTPList.jsx
frontend/src/styles/: AddTOTP.css  Login.css  Settings.css  TOTPList.css
src/: api.rs  auth.rs  config.rs  crypto.rs  error.rs  main.rs  models.rs  storage.rs  totp_manager.rs
src/handlers/: auth.rs  mod.rs  settings.rs  totp.rs
static/: app.js  i18n.js  index.html  style.css
