[package]
name = "webtotp"
version = "1.0.0"
edition = "2021"
authors = ["steven"]
description = "A secure web-based TOTP (Time-based One-Time Password) manager with 2FA login protection"
license = "MIT"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-web = "4.11.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = "0.4.42"
data-encoding = "2.9.0"
hex = "0.4.3"
once_cell = "1.20.2"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
totp-lite = "2.0.1"
uuid = { version = "1.18.1", features = ["v4"] }
