[package]
name = "web-totp"
version = "1.0.0"
edition = "2021"
authors = ["Steven"]
description = "Production-grade 2FA management tool with AES-256-GCM encryption"
repository = "https://github.com/steven/web-totp"
license = "MIT"
keywords = ["2fa", "totp", "authenticator", "security", "encryption"]
categories = ["authentication", "cryptography", "web-programming"]

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
totp-rs = { version = "5.0", features = ["otpauth"] }
base64 = "0.21"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
qrcode = { version = "0.12", default-features = false, features = ["svg"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.9.2"
argon2 = "0.3"
sha2 = "0.10"
hex = "0.4"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true

